[package]
name = "stm-core"
version = "0.4.0"
authors = ["Marthog <Marthog@users.noreply.github.com>"]

description = """
Implementation of Software transactional memory. STM Allows composable atomic operations.
STM-core implements the bare bones of stm usage. The STM crate adds useful data structures.
"""

license = "MIT OR Apache-2.0"
homepage = "https://github.com/Marthog/rust-stm/stm-core"
repository = "https://github.com/Marthog/rust-stm/stm-core"
documentation = "https://docs.rs/stm-core/0.3.0"

readme = "README.md"

keywords = ["stm", "atomic", "transaction", "lockfree", "concurrency"]
categories = ["concurrency"]


[lib]
# This field points at where the crate is located, relative to the Cargo.toml.
path = "src/lib.rs"

# A flag for enabling unit tests for this target. This is used by `cargo test`.
test = true

# A flag for enabling documentation tests for this target. This is only
# relevant for libraries, it has no effect on other sections. This is used by
# `cargo test`.
doctest = true

# A flag for enabling benchmarks for this target. This is used by `cargo bench`.
bench = true

# A flag for enabling documentation of this target. This is used by `cargo doc`.
doc = true


[features]
default = []

[dependencies.parking_lot]
version = "0.5"
default-features = false

