[package]
name = "stm-macro"
version = "0.1.0"
authors = ["Marthog <Marthog@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
quote = "1.0.0"
proc-macro2 = "1.0.0"

[dependencies.syn]
features = ["default", "fold", "full", "parsing"]
version = "1.0.0"

